--- a/package.json
+++ b/package.json
@@ -9,14 +9,10 @@
     "start": "webpack serve --open --config webpack.dev.js"
   },
   "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Silva-Mo/weather-app"
+    "type": "git"
   },
   "author": "Silva-Mo",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Silva-Mo/weather-app/issues"
-  },
   "homepage": "https://github.com/Silva-Mo/weather-app#readme",
   "devDependencies": {
     "@eslint/js": "^9.32.0",
